# bazel-mono

./: BUILD.bazel  README.md  WORKSPACE
libs/: greeter.cs
src/: hello.cs
